--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     font-family: 'Jost', sans-serif;
@@ -8,25 +8,27 @@
     scroll-behavior: smooth;
 }
 
-body::-webkit-scrollbar {display: none;}
+body::-webkit-scrollbar {
+    display: none;
+}
 
-:root{
-    --bgcolor:white;
-    --textcolor:#000;
-    --scndcolor:#a09dab;
-    --maincolor:#f75023;
-    --bigfont:5rem;
-    --h2font:3rem;
-    --pfont:1.1rem;
+:root {
+    --bgcolor: white;
+    --textcolor: #000;
+    --scndcolor: #a09dab;
+    --maincolor: #f75023;
+    --bigfont: 5rem;
+    --h2font: 3rem;
+    --pfont: 1.1rem;
 }
 
 
-body{
+body {
     background-color: var(--bgcolor);
     color: var(--textcolor);
 }
 
-header{
+header {
     position: fixed;
     width: 100%;
     top: 0;
@@ -40,23 +42,26 @@ header{
     padding: 30px 18%;
 }
 
-.navlist{
+.navlist {
     display: flex;
 }
-.navlist li{
+
+.navlist li {
     position: relative;
 }
 
-.navlist a{
+.navlist a {
     font-size: var(--pfont);
     color: var(--textcolor);
     font-weight: 500;
-    padding: 10px 20px ;
+    padding: 10px 20px;
 }
-.navlist a:hover{
+
+.navlist a:hover {
     color: #00b09b;
 }
-.navlist a::after{
+
+.navlist a::after {
     content: "";
     position: absolute;
     width: 0;
@@ -67,17 +72,18 @@ header{
     transition: ease 0.40s;
 }
 
-.navlist a:hover::after{
+.navlist a:hover::after {
     width: 100%;
-    
+
 }
 
-.sticky{
+.sticky {
     background: var(--bgcolor);
     padding: 13px 18%;
     box-shadow: 0px 0px 10px #747373f3;
 }
-#menu-icon{
+
+#menu-icon {
     font-size: 35px;
     color: var(--textcolor);
     z-index: 1000;
@@ -85,7 +91,7 @@ header{
     display: none;
 }
 
-.top-btn{
+.top-btn {
     display: inline-block;
     padding: 12px;
     margin-left: 4px;
@@ -97,18 +103,20 @@ header{
     font-weight: 500;
     transition: ease 0.40s;
 }
-.top-btn:hover{
+
+.top-btn:hover {
     color: white;
     border: 1px dashed whitesmoke;
 
     background: linear-gradient(to right, #00b09b, #96c93d);
 }
+
 /* --------------------------home-section------------------------- */
-section{
+section {
     padding: 150px 50px;
 }
 
-.home{
+.home {
     min-height: 100vh;
     height: 100%;
     width: 100%;
@@ -118,39 +126,41 @@ section{
     position: relative;
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 4rem;
 }
 
-.home-text h1{
+.home-text h1 {
     margin: 10px 0px 25px;
     font-size: var(--bigfont);
     line-height: 1;
-    font-weight:500;
-}
-
-.home-text h5{
-    margin-bottom: 23px;
-    font-size:19px;
     font-weight: 500;
 }
 
-.home-text h5 span{
+.home-text h5 {
+    margin-bottom: 23px;
+    font-size: 19px;
+    font-weight: 500;
+}
+
+.home-text h5 span {
     color: var(--maincolor);
 }
-.home-text h3{
+
+.home-text h3 {
     color: var(--maincolor);
     font-size: 28px;
     font-weight: 500;
 }
-.home-text p{
+
+.home-text p {
     font-size: var(--pfont);
     color: var(--scndcolor);
     line-height: 28px;
-    margin-bottom:20px;
+    margin-bottom: 20px;
 }
 
-.social a{
+.social a {
     width: 35px;
     height: 35px;
     border-radius: 50%;
@@ -160,14 +170,17 @@ section{
     transition: .30s;
     background: transparent;
 }
-.social a:hover{
-    background: #96c93d6d;;
+
+.social a:hover {
+    background: #96c93d6d;
+    ;
     transition: ease 0.40s;
     color: white;
     width: 36px;
     height: 36px;
 }
-.home-img-me img{
+
+.home-img-me img {
     width: 466px;
     /* height: 391px; */
     max-width: 100%;
@@ -176,87 +189,92 @@ section{
     min-width: 216px;
 }
 
-.btn{
+.btn {
     display: inline-block;
     background: linear-gradient(to right, #bc4e9c, #f80759);
     font-size: var(--pfont);
     color: var(--bgcolor);
     font-weight: 500;
     line-height: 24px;
-    border-radius:30px;
+    border-radius: 30px;
     padding: 8px;
     transition: ease 0.4s;
     margin-top: 25px;
 
 }
-.btn:hover{
-    transform:scale(1.1);
+
+.btn:hover {
+    transform: scale(1.1);
 }
 
 /* -----------------------Sub-service----------------------------------- */
-.items{
+.items {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(220px,auto));
-    grid-gap:2rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+    grid-gap: 2rem;
     align-items: center;
     text-align: center;
 }
 
-.sub-box{
-    padding:45px ;
+.sub-box {
+    padding: 45px;
     transition: ease .4s;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.sub-img img{
+.sub-img img {
     max-width: 100%;
     width: 60px;
     height: auto;
     margin-bottom: 20px;
 }
 
-.sub-box h3{
+.sub-box h3 {
     margin-bottom: 10px;
     color: var(--textcolor);
     font-size: 24px;
     font-weight: 500;
 }
 
-.sub-box p{
+.sub-box p {
     font-size: var(--pfont);
     color: var(--scndcolor);
     line-height: 28px;
 }
-.sub-box:hover{
+
+.sub-box:hover {
     background: #eeecec23;
     box-shadow: 18px 0px 87px 0px #cdcaca;
     border-radius: 10px;
     will-change: transform;
-    transform: perspective(1000px) rotateY(4.80deg) rotateX(10.23deg) scale3d(1.05,1.05,1.05);
+    transform: perspective(1000px) rotateY(4.80deg) rotateX(10.23deg) scale3d(1.05, 1.05, 1.05);
 }
 
 /* ------------------------about section------------------ */
 
-.about{
+.about {
     display: grid;
-    grid-template-columns: repeat(2,2fr);;
-    grid-gap:5rem;
+    grid-template-columns: repeat(2, 2fr);
+    ;
+    grid-gap: 5rem;
     align-items: center;
     text-align: center;
 }
 
-.about-text h3{
+.about-text h3 {
     font-size: var(--pfont);
     font-weight: 500;
     color: var(--maincolor);
 }
-.about-text h2{
+
+.about-text h2 {
     font-size: var(--h2font);
     font-weight: 500;
     margin: 8px 0px 25px;
     line-height: 1.1;
 }
-.about-img img{
+
+.about-img img {
     max-width: 417px;
     /* width: 250px; */
     height: auto;
@@ -264,23 +282,25 @@ section{
 
 /* ------------------------Achivements------------------ */
 
-.heading{
+.heading {
     text-align: center;
 }
-.heading h3{
+
+.heading h3 {
     color: var(--maincolor);
     font-weight: 500;
     font-size: 20px;
 }
 
-.heading h2{
+.heading h2 {
     color: var(--textcolor);
     font-size: var(--h2font);
     font-weight: 500;
     margin: 7px 0px 20px;
     line-height: 1.1;
 }
-.heading p{
+
+.heading p {
     color: var(--scndcolor);
     font-size: var(--pfont);
     font-weight: 500;
@@ -290,108 +310,120 @@ section{
 /* ------------------------projects content------------------ */
 
 
-.project-content{
+.project-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(350px,auto));
+    grid-template-columns: repeat(auto-fit, minmax(350px, auto));
     grid-gap: 2rem;
     align-items: center;
     margin-top: 5rem;
     text-align: center;
 }
 
-.project-content .col img{
+.project-content .col img {
     width: 300px;
     height: 400px;
     object-fit: cover;
     border-radius: 12px;
-    cursor:pointer;
+    cursor: pointer;
 }
-.col{
+
+.col {
     position: relative;
 }
 
-.layer{
-	background: transparent;
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	border-radius: 12px;
-	transition: all .40s;
-}
-.layer:hover{
-	background: linear-gradient(rgba(0,0,0,0.5) 0%, #191919);
-}
-.layer h3{
-	position: absolute;
-	width: 100%;
-	font-size: 25px;
-	font-weight: 500;
-	color: white;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	opacity: 0;
-	transition: all .40s;
-}
-.layer:hover h3{
-	bottom: 52%;
-	opacity: 1;
+.layer {
+    background: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 12px;
+    transition: all .40s;
 }
 
-.layer h5{
-	position: absolute;
-	width: 100%;
-	font-size:17px;
-	font-weight: 500;
-	color: white;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	opacity: 0;
-	transition: all .40s;
+.layer:hover {
+    background: linear-gradient(rgba(0, 0, 0, 0.5) 0%, #191919);
 }
-.layer:hover h5{
-	bottom: 48%;
-	opacity: 1;
+
+.layer h3 {
+    position: absolute;
+    width: 100%;
+    font-size: 25px;
+    font-weight: 500;
+    color: white;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: all .40s;
 }
+
+.layer:hover h3 {
+    bottom: 52%;
+    opacity: 1;
+}
+
+.layer h5 {
+    position: absolute;
+    width: 100%;
+    font-size: 17px;
+    font-weight: 500;
+    color: white;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: all .40s;
+}
+
+.layer:hover h5 {
+    bottom: 48%;
+    opacity: 1;
+}
+
 /* ------------------------projects completed------------------ */
-.cta-box{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(220px, auto));
-	grid-gap: 2rem;
-	align-items: center;
-	margin-top: 5rem;
-	text-align: center;
-}
-.wrap{
-	background: #ffffff;
-	box-shadow: 18px 0px 87px 0px rgb(10 15 70 / 7%);
-	border-radius: 12px;
-	padding: 50px 50px 50px 50px;
-	transition: ease .40s;
-	cursor: pointer;
-}
-.one{
-	background: #30E3CA;
-}
-.two{
-	background: #79DAE8;
-}
-.three{
-	background: #CCA8E9;
-}
-.wrap h3{
-	font-size: 24px;
-	font-weight: 500;
-	margin-bottom: 2px;
-}
-.wrap p{
-	font-size: var(--p-font);
+.cta-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+    grid-gap: 2rem;
+    align-items: center;
+    margin-top: 5rem;
+    text-align: center;
 }
 
-.contact{
+.wrap {
+    background: #ffffff;
+    box-shadow: 18px 0px 87px 0px rgb(10 15 70 / 7%);
+    border-radius: 12px;
+    padding: 50px 50px 50px 50px;
+    transition: ease .40s;
+    cursor: pointer;
+}
+
+.one {
+    background: #30E3CA;
+}
+
+.two {
+    background: #79DAE8;
+}
+
+.three {
+    background: #CCA8E9;
+}
+
+.wrap h3 {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.wrap p {
+    font-size: var(--p-font);
+}
+
+.contact {
     background: #d302da;
     width: 64%;
     height: auto;
@@ -406,25 +438,100 @@ section{
     background-size: cover;
 }
 
-.center h3{
+.center h3 {
     color: var(--bgcolor);
     font-size: 30px;
     font-weight: 500;
 }
-.center p{
+
+.center p {
     color: var(--scndcolor);
     font-weight: 500;
     font-size: 15px;
+    line-height: 6rem;
 }
 
-.action form .email{
+
+ .action{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    cursor: pointer;
+    font: 16px/24px Arial, sans-serif;
+    background-color: transparent;
     border-radius: 30px;
-    padding: 8px;
-    max-width: 280px;
-    min-width: 148px;
-    height: auto;
-    width: 250px;
+ }
+ .action:hover{
+    position: absolute;
+    background-color: #96c93d;
+    transform: translate(-50%, -50%);
+    transition: 
+      box-shadow 0.4s ease, 
+      background-color 0.4s ease, 
+      color 0.4s ease;
+    
+  }
+  
+.action span {
+    color: #fff;
+    letter-spacing: 8px;
 }
-.action form .btn{
-    border: none;
+
+.action:hover i{
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 200px;
+    background-color: inherit;
+    box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+    transition:
+        transform 0.4s linear,
+        top 1s linear;
+    overflow: hidden;
+}
+
+.action:hover i:before,
+.action:hover i:after {
+    content: "";
+    position: absolute;
+    width: 200%;
+    height: 200%;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -75%);
+}
+
+.action:hover i:before {
+    border-radius: 46%;
+    background-color: rgba(20, 20, 20, 0.2);
+    animation: animate 5s linear infinite;
+}
+
+.action:hover i:after {
+    border-radius: 40%;
+    background-color: rgba(20, 20, 20, 0.5);
+    animation: animate 10s linear infinite;
+}
+
+@keyframes animate {
+    0% {
+        transform:
+            translate(-50%, -75%) rotate(0deg);
+    }
+
+    100% {
+        transform:
+            translate(-50%, -75%) rotate(360deg);
+    }
+}
+
+span a{
+    color: var(--bgcolor);
 }
