--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ section {
 }
 
 .home-img-me img {
-    width: 466px;
+    width: 70%;
     /* height: 391px; */
     max-width: 100%;
     height: auto;
