--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1123,7 +1123,7 @@ body {
 /* Preloader */
 .container-preloader {
   align-items: center;
-  cursor: none;
+  cursor:pointer;
   display: flex;
   height: 100%;
   justify-content: center;
